--- a/src/styles/_media980px.scss
+++ b/src/styles/_media980px.scss
@@ -5,7 +5,7 @@
 
   .container {
     width: 980px;
-    height: 519px;
+    //height: 550px;
     padding: 30px 50px 20px;
     margin: 30px auto;
     background-color: $white;
